# garden_scrape

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  spec.md  tea_gardens.db-wal
data/: DATA_SOURCES.md  Grower_Details_Report_TINSUKIA_pdf823(1).xlsx  Tea Estates number required.xlsx  Tea Estates.xlsx  Tea-Directory-Assam.xls  email assam.dooars teaestate.xlsx  proxies.txt  tea_estate_contacts.xlsx  tea_estate_contacts_v2.xlsx
src/: __init__.py  config.py  db.py  db_v2.py  email_crawler.py  geospatial_extractor.py  ingestion.py  main.py  maps_scraper.py  migrate_db.py  models.py  parsers.py  pincode_data.py  pipeline.py  process_sources.py  run.py  run_maps.py  run_maps_all_districts.py  run_pincode.py  run_wiki.py  scrape.py  visual_check.py
src/scrapers/: __init__.py  discovery.py  discovery_crawler.py  tbi_portal.py  wikipedia.py
src/tui/: app.py  patch_rich.py
